--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
-<div class="content">
+<div class="content flex-base">
   <div class="menu">
     <app-menu></app-menu>
   </div>
+  <router-outlet></router-outlet>
 </div>
 
