--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import "shared/scss/theme";
+@import "shared/scss/breakpoints";
 @import "shared/scss/helpers";
 
 html, body { height: 100%; }
